@@ -1,5 +1,8 @@
 [Changes 1.2c01]
 
+* Change the display of server stats so that the averages (eg. users per
+  channel) are correctly rounded. (caf)
+
 * Reinstate RPL_WHOISACTUALLY numeric - things seem to have stabilised in
   the ircd world on this. (caf)
 
